[figure] fix timeout problem

--- a/acary_bremond_dubois_csma2017.tex
+++ b/acary_bremond_dubois_csma2017.tex
@@ -57,21 +57,21 @@ Résumé de 6 lignes maximum. Résumé de 6 lignes maximum. Résumé de 6 lignes
   \centering
   \includegraphics{figure/LowWall_FEM.1e-3/simple/profile-LMGC_LowWall_FEM.pdf}
   \includegraphics{figure/LowWall_FEM.1e-3/simple/profile-LMGC_LowWall_FEM_legend.pdf}
-  \caption{Comparaison entre le solveur NSGS-AC et NSN-AC pour une precision de $10^{-3}$}
+  \caption{Comparaison entre le solveur NSGS-AC et NSN-AC pour une précision de $10^{-3}$}
   \label{fig:LowWall_FEM.1e-3.simple}
 \end{figure}
 \begin{figure}
   \centering
   \includegraphics{figure/LowWall_FEM.1e-4/simple/profile-LMGC_LowWall_FEM.pdf}
   \includegraphics{figure/LowWall_FEM.1e-4/simple/profile-LMGC_LowWall_FEM_legend.pdf}
-  \caption{Comparaison entre le solveur NSGS-AC et NSN-AC pour une precision de $10^{-4}$}
+  \caption{Comparaison entre le solveur NSGS-AC et NSN-AC pour une précision de $10^{-4}$}
   \label{fig:LowWall_FEM.1e-4.simple}
 \end{figure}
 \begin{figure}
   \centering
   \includegraphics{figure/LowWall_FEM.1e-6/simple/profile-LMGC_LowWall_FEM.pdf}
   \includegraphics{figure/LowWall_FEM.1e-6/simple/profile-LMGC_LowWall_FEM_legend.pdf}
-  \caption{Comparaison entre le solveur NSGS-AC et NSN-AC pour une precision de $10^{-6}$}
+  \caption{Comparaison entre le solveur NSGS-AC et NSN-AC pour une précision de $10^{-6}$}
   \label{fig:LowWall_FEM.1e-6.simple}
 \end{figure}
 
@@ -80,14 +80,14 @@ Résumé de 6 lignes maximum. Résumé de 6 lignes maximum. Résumé de 6 lignes
   \centering
   \includegraphics{figure/LowWall_FEM.1e-4/nsn_nls/profile-LMGC_LowWall_FEM.pdf}
   \includegraphics{figure/LowWall_FEM.1e-4/nsn_nls/profile-LMGC_LowWall_FEM_legend.pdf}
-  \caption{Comparaison des solveurs NSN-*-NLS pour une precision de $10^{-4}$}
+  \caption{Comparaison des solveurs NSN-*-NLS pour une précision de $10^{-4}$}
   \label{fig:LowWall_FEM.1e-4.nsn_nls}
 \end{figure}
 \begin{figure}
   \centering
   \includegraphics{figure/LowWall_FEM.1e-4/nsgs/profile-LMGC_LowWall_FEM.pdf}
   \includegraphics{figure/LowWall_FEM.1e-4/nsgs/profile-LMGC_LowWall_FEM_legend.pdf}
-  \caption{Comparaison des solveurs NSGS pour une precision de $10^{-4}$}
+  \caption{Comparaison des solveurs NSGS pour une précision de $10^{-4}$}
   \label{fig:LowWall_FEM.1e-4.nsgs}
 \end{figure}
 
