[tex] update pdf and latex files

--- a/acary_bremond_dubois_csma2017.tex
+++ b/acary_bremond_dubois_csma2017.tex
@@ -55,22 +55,22 @@ Résumé de 6 lignes maximum. Résumé de 6 lignes maximum. Résumé de 6 lignes
 \subsection{Résultats}
 \begin{figure}
   \centering
-  \includegraphics{figure/LowWall_FEM.1e-3/simple/profile-LMGC_LowWall_FEM.pdf}
-  \includegraphics{figure/LowWall_FEM.1e-3/simple/profile-LMGC_LowWall_FEM_legend.pdf}
+  \includegraphics{figure/LowWall_FEM.1e-3.with_guess/simple/profile-LMGC_LowWall_FEM.pdf}
+  \includegraphics{figure/LowWall_FEM.1e-3.with_guess/simple/profile-LMGC_LowWall_FEM_legend.pdf}
   \caption{Comparaison entre le solveur NSGS-AC et NSN-AC pour une précision de $10^{-3}$}
   \label{fig:LowWall_FEM.1e-3.simple}
 \end{figure}
 \begin{figure}
   \centering
-  \includegraphics{figure/LowWall_FEM.1e-4/simple/profile-LMGC_LowWall_FEM.pdf}
-  \includegraphics{figure/LowWall_FEM.1e-4/simple/profile-LMGC_LowWall_FEM_legend.pdf}
+  \includegraphics{figure/LowWall_FEM.1e-4.with_guess/simple/profile-LMGC_LowWall_FEM.pdf}
+  \includegraphics{figure/LowWall_FEM.1e-4.with_guess/simple/profile-LMGC_LowWall_FEM_legend.pdf}
   \caption{Comparaison entre le solveur NSGS-AC et NSN-AC pour une précision de $10^{-4}$}
   \label{fig:LowWall_FEM.1e-4.simple}
 \end{figure}
 \begin{figure}
   \centering
-  \includegraphics{figure/LowWall_FEM.1e-6/simple/profile-LMGC_LowWall_FEM.pdf}
-  \includegraphics{figure/LowWall_FEM.1e-6/simple/profile-LMGC_LowWall_FEM_legend.pdf}
+  \includegraphics{figure/LowWall_FEM.1e-6.with_guess/simple/profile-LMGC_LowWall_FEM.pdf}
+  \includegraphics{figure/LowWall_FEM.1e-6.with_guess/simple/profile-LMGC_LowWall_FEM_legend.pdf}
   \caption{Comparaison entre le solveur NSGS-AC et NSN-AC pour une précision de $10^{-6}$}
   \label{fig:LowWall_FEM.1e-6.simple}
 \end{figure}
@@ -78,15 +78,15 @@ Résumé de 6 lignes maximum. Résumé de 6 lignes maximum. Résumé de 6 lignes
 
 \begin{figure}
   \centering
-  \includegraphics{figure/LowWall_FEM.1e-4/nsn_nls/profile-LMGC_LowWall_FEM.pdf}
-  \includegraphics{figure/LowWall_FEM.1e-4/nsn_nls/profile-LMGC_LowWall_FEM_legend.pdf}
+  \includegraphics{figure/LowWall_FEM.1e-4.with_guess/nsn_nls/profile-LMGC_LowWall_FEM.pdf}
+  \includegraphics{figure/LowWall_FEM.1e-4.with_guess/nsn_nls/profile-LMGC_LowWall_FEM_legend.pdf}
   \caption{Comparaison des solveurs NSN-*-NLS pour une précision de $10^{-4}$}
   \label{fig:LowWall_FEM.1e-4.nsn_nls}
 \end{figure}
 \begin{figure}
   \centering
-  \includegraphics{figure/LowWall_FEM.1e-4/nsgs/profile-LMGC_LowWall_FEM.pdf}
-  \includegraphics{figure/LowWall_FEM.1e-4/nsgs/profile-LMGC_LowWall_FEM_legend.pdf}
+  \includegraphics{figure/LowWall_FEM.1e-4.with_guess/nsgs/profile-LMGC_LowWall_FEM.pdf}
+  \includegraphics{figure/LowWall_FEM.1e-4.with_guess/nsgs/profile-LMGC_LowWall_FEM_legend.pdf}
   \caption{Comparaison des solveurs NSGS pour une précision de $10^{-4}$}
   \label{fig:LowWall_FEM.1e-4.nsgs}
 \end{figure}
