small progress in article

--- a/biblio.bib
+++ b/biblio.bib
@@ -1,5 +1,5 @@
 @STRING{cmame	= "Computer Methods in Applied Mechanics and Engineering"}
-
+@STRING{cras	= "Comptes Rendus de l'Acad\'emie des Sciences" }
 @article{bertailsdescoubes:inria-00557706,
   AUTHOR =	 {Bertails-Descoubes, F. and Cadoux, F. and Daviet,
                   G. and Acary, V.},
@@ -43,4 +43,53 @@
                   monuments},
   adress =	 {Lisboa, Portugal},
   publisher =	 {Laborat\'orio Nacional de engenharia Civil (LNEC)}
+}
+@Article{DeSaxce92,
+  author =	 {De Saxc\'e, G.},
+  title =	 {Une g\'en\'eralisation de l'in\'egalit\'e de
+                  {F}enchel et ses applications aux lois
+                  constitutives},
+  journal =	 cras,
+  year =	 1992,
+  volume =	 {t 314,série II},
+  pages =	 {125-129}
+}
+
+
+@article {Acary.ea_ZAMM2011,
+  author =	 {Acary, V. and Cadoux, F. and Lemar\'echal, C. and
+                  Malick, J.},
+  title =	 {A formulation of the linear discrete Coulomb
+                  friction problem via convex optimization},
+  journal =	 {ZAMM - Journal of Applied Mathematics and Mechanics
+                  / Zeitschrift f\"ur Angewandte Mathematik und
+                  Mechanik},
+  volume =	 91,
+  number =	 2,
+  publisher =	 {WILEY-VCH Verlag},
+  issn =	 {1521-4001},
+  url =		 {http://dx.doi.org/10.1002/zamm.201000073},
+  doi =		 {10.1002/zamm.201000073},
+  pages =	 {155--175},
+  keywords =	 {Nonsmooth mechanics, contact mechanics, Coulomb
+                  friction, Painlevé's problem, fixed-point theorem,
+                  convex analysis, convex optimization, second-order
+                  cone programming.},
+  year =	 2011,
+  abstract =	 {This paper presents a new formulation of the
+                  dynamical Coulomb friction problem in finite
+                  dimension with discretized time. The novelty of our
+                  approach is to capture and treat directly the
+                  friction model as a parametric quadratic
+                  optimization problem with second-order cone
+                  constraints coupled with a fixed point
+                  equation. This intrinsic formulation allows a simple
+                  existence proof under reasonable assumptions, as
+                  well as a variety of solution algorithms. We study
+                  mechanical interpretations of these assumptions,
+                  showing in particular that they are actually
+                  necessary and sufficient for a basic example similar
+                  to the so-called “paradox of Painlevé”. Finally, we
+                  present some implementations and experiments to
+                  illustrate the practical aspect of our work.},
 }
