--- a/acary_bremond_dubois_csma2017.tex
+++ b/acary_bremond_dubois_csma2017.tex
@@ -19,7 +19,21 @@ $^2$ LMGC, Université de Montpellier, frederic.dubois@umontpellier.fr \\
 % Les commances \vect et \tens sont définies dans le fichier CSMA2017.cls
 
 
+\def\RR{\nbR}
+\def\NN{\nbN}
+\def\nbR{\ensuremath{\mathrm{I\!R}}} % IR
+\def\nbN{\ensuremath{\mathrm{I\!N}}} % IN
 
+\def\n{{\hbox{\tiny{N}}}}
+\def\t{{\hbox{\tiny{T}}}}
+
+\def\tone{{\hbox{\tiny{T}}}_{\hbox{\tiny{1}}}}
+\def\ttwo{{\hbox{\tiny{T}}}_{\hbox{\tiny{2}}}}
+
+\usepackage{tikz}
+\usepackage{xkeyval,tkz-base}
+\usetikzlibrary{arrows}
+\usetikzlibrary{calc}
 
 % ----------------------------------------------------------------------
 \begin{document}
@@ -45,8 +59,115 @@ Dans le cas de système de corps flexibles, discrétisés par exemple par des é
 Dans cette contribution, on montrer qu'il devient alors intéressant d'utiliser des méthodes de Newton non lisses pour résoudre le problème discret surtout si on veut atteindre des niveaux de précision relative supérieurs à $10^{-4}$.  Alors que les méthodes itératives de type projection/relaxation continuent à converger lentement, les méthodes de Newton retrouvent leurs convergences quadratiques locales pour des systèmes fortement réguliers. Cela permet d'atteindre des niveaux de précisions arbitraires pour un coût de calcul bien moindres. Dans ce travail, on essaye aussi de montrer qu'il peut être intéressant d'introduire \marginpar{voir si on peut le faire} un modèle de comportement élastique dans un système rigide afin de profiter des avantages d'un point de vue numériques des méthodes de Newton. Dans des travaux antérieurs, M. Jean~\cite{Jean1999,Acary.Jean98} avait montré que l'introduction de l'élasticité permettait de réduire le degré d'hyperstaticité et d'améliorer sensiblement la qualité des solutions en termes de forces de réaction. En préférant des méthodes de Newton non--lisses, on améliore aussi fortement le coût de calcul.
 
 
+\paragraph{Formulation du problème}
+
+Considérons un nombre  $n_c\in \NN$ de points de contact tridimensionnel et un nombre   $n\in\NN$ de degrés de liberté du système discret. Pour chaque contact $\alpha$, les vitesses relatives locales au contact notées  $u^\alpha\in\RR^3$ et les réactions au contact notées $r^\alpha\in\RR^3$ (forces ou impulsions) sont décomposées dans un repère local au contact $({\sf N}^\alpha,{\sf T_1}^\alpha,{\sf T_2}^\alpha)$ telles que  $u^\alpha = u^\alpha_{\n} {\sf N}^\alpha +   u^{\alpha}_{\tone}{\sf T_1}^\alpha + u^{\alpha}_{\ttwo}{\sf T_2}^\alpha , u^\alpha_{\n} \in \RR, u^\alpha_{\t} = [u^{\alpha}_{\tone},u^{\alpha}_{\ttwo}]^\top \in \RR^2$ and  $r^\alpha = r^\alpha_{\n} {\sf N}^\alpha +   r^{\alpha}_{\tone}{\sf T_1}^\alpha + r^{\alpha}_{\ttwo}{\sf T_2}^\alpha  , r^\alpha_{\n} \in \RR, r^\alpha_{\t}=[r^{\alpha}_{\tone},r^{\alpha}_{\ttwo}]^\top \in \RR^2$. L'interstice au contact est noté $g_\n^\alpha$ (voir la figure~\ref{fig:local-frame}).
+
+\begin{figure}
+  \centering
+  \begin{tikzpicture}[ scale=3,
+      axis/.style={ ->, >=stealth'},
+      normal/.style={ thick, ->, >=stealth'},
+      important line/.style={very thick},
+      dashed line/.style={dashed, thin},
+      every node/.style={color=black},
+      soldot/.style={only marks,mark=*},
+      holdot/.style={fill=white,only marks,mark=*}
+      ]
+      % body
+      \node (BodyA) at (1,-1) {Body A};
+      \fill[gray!20] (1,0) arc (0:-90:1);
+      \fill[gray!20] (1,0) arc (90:180:1);
+      \draw (1,0) arc (90:180:1);
+
+      \node (BodyB) at (-1,1) {Body B};
+      \draw (0,1) arc (0:-90:1);
+      \fill[gray!20] (0,1) arc (90:180:1);
+      \fill[gray!20] (0,1) arc (0:-90:1);
+
+      % local frame
+      \def\nlength{0.35};
+      \coordinate (CA)  at  ({1.0-sqrt(2)/2.0},{-1.0+sqrt(2)/2.0});
+      \node[] at  (CA) [below] {$\sf C_A$};
+      \draw[holdot]  (CA) circle(0.05em);
+      \draw[normal] (CA) -- ($(CA)+({-\nlength*sqrt(2)/2.0},{+\nlength*sqrt(2)/2.0 })$) node [right] {$\,\sf N$};
+      \draw[normal] (CA) -- ($(CA)+({-\nlength*sqrt(2)/2.0},{-\nlength*sqrt(2)/2.0 })$) node [above] {$\sf T_1\quad$};
+      \draw[dashed line] (BodyA) -- (BodyB);
+      \draw[holdot] ($(CA)+({\nlength*sqrt(3)/2.0},{0.0})$) circle(0.2em);
+      \node at ($(CA)+({\nlength*sqrt(3)/2.0},{0.0})$) [right]{$\sf T_2$};
+      \draw[soldot] ($(CA)+({\nlength*sqrt(3)/2.0},{0.0})$) circle(0.02em);
+
+      \coordinate (CB)  at  ({-1.0+sqrt(2)/2.0},{1.0-sqrt(2)/2.0});
+      \node at  (CB) [above] {$\sf C_B$};
+      \draw[holdot]  (CB) circle(0.05em);
+
+      \draw[axis] (CA) -- (CB) node[midway, below left ] {$\sf g_\n$} ;
+      
+      % \draw[axis] (0,-0.4) -- (0,0.4) node(yline)[right] {$\sgn(x)$};
+      % % lines
+      % \draw[important line] (-0.4,-0.3) -- (0.   ,-.3);
+      % \draw[important line] (0.0,0.3) --(.4,.3)  ;
+      % \coordinate (O) at (0.0, 0.05);
+      % \draw[fill] (O) circle (0.03em);
+      % \draw (0.0,0.05) node[right]{$a$};
+      % \draw (0.0,0.3) node[left]{$1$};
+      % \draw (0.0,-0.3) node[right]{$-1$};
+      % \draw[holdot] (0.0,0.3) circle (0.03em);
+      % \draw[holdot] (0.0,-.3) circle (0.03em);
+    \end{tikzpicture}
+\caption{Repère local au contact}
+\label{fig:local-frame}
+\end{figure}
+
+Pour chaque contact, on définit le cône de Coulomb comme le cone du second ordre suivant:
+\begin{equation}
+  \label{eq:CoulombCone}
+  K^\alpha = \{r^\alpha \in \RR^3 \mid \|r^\alpha_\t\| \leq \mu^\alpha r^\alpha_n\}.
+\end{equation}
+où $\mu^\alpha$ est le coefficient de frottement du contact $\alpha$. Sous forme disjonctive, le contact unilatéral en vitesse avec du frottement de Coulomb peut s'écrire
+\begin{equation}
+  \label{eq:contact-disjunctive}
+  \left\{\begin{array}{llr}
+      r^\alpha = 0  &\text{ if } g^\alpha_{\n} > 0  & \text{(pas de  contact)}\\
+      r^\alpha = 0,  u^\alpha_\n \geq 0   &\text{ if } g^\alpha_{\n} \leq 0 & \text{(décollage)} \\
+      r^\alpha \in K^\alpha, u^\alpha =0 &\text{ if } g^\alpha_{\n} \leq 0 & \text{(adhérence)}  \\
+      r^\alpha \in \partial K^\alpha,u^\alpha _\n=0,  \exists\,\beta > 0, u^\alpha_\t = -\beta r^\alpha_\t &\text{ if } g^\alpha_{\n} \leq 0 & \text{(glissement)}  \\
+    \end{array}\right.
+\end{equation}
+En introduisant la vitesse relative locale modifiée $\hat u^\alpha = u^\alpha + \mu^\alpha \|u^\alpha_\t\| {\sf N}^\alpha$ due à~\cite{DeSaxce92}, le problème peut être reformulé de manière équivalente comme un problème de complémentarité du second ordre~\cite{DeSaxce92,Acary.ea_ZAMM2011} :
+\begin{equation}
+  \label{eq:contact-soccp}
+  \left\{\begin{array}{ll}
+      r^\alpha = 0  & \text{ if } g^\alpha_{\n} > 0  \\
+      K^{\alpha,\star}\ni \hat u^\alpha \perp r^\alpha \in K^\alpha  & \text{ sinon. }\\
+    \end{array}\right.
+\end{equation}
+Le cône $K^{\alpha,\star}$ est le cône dual de $K^\alpha$.
+
+Suite à une discrétisation des équations du mouvement ou d'équilibre, et à une possible linéarisation, on peut relier les variables cinématiques $ {v} \in \RR^n$ aux effort de contact par une relation linéaire, ce qui nous conduit au problème linéaire de complémentarité suivant en cas de contact :
+\begin{equation}\label{eq:soccp1-intro}
+  \begin{array}{rcl}
+    M v = {H} {r} + {f}, &
+    u = H^\top v + w,  &
+    \hat u = u + g(u) ,\\[1mm]
+    &    K^\star \ni {\hat u} \perp r \in K,&
+  \end{array}
+\end{equation}
+où $f\in RR^n$ est homogène à des efforts, $K$ est le produit cartésien de cônes pour chaque contact, 
+\begin{equation}
+  \label{eq:CC}
+  K = \prod_{\alpha=1\ldots n_c} K^{\alpha}  = \prod_{\alpha=1\ldots n_c} \{r^\alpha, \|r^\alpha_\t \| \leq \mu^\alpha |r^\alpha_\n| \}
+\end{equation}
+et $K^\star$ son dual. La fonction $g(u)$ est une fonction non--lisse définie par 
+\begin{equation}
+g(u) = [[\mu^\alpha  \|u^\alpha_\t\| {\sf N}^\alpha]^\top, \alpha = 1\ldots n_c]^\top\label{eq:gg}. 
+\end{equation}
+La matrice $M \RR^{n \times n}$ est le plus souvent définie positive.
 
 
+\paragraph{Rang de la matrice $H$} Attardons nous un moment sur la matrice $H \in \RR^{n\times 3n_c} $ qui relie les efforts de contact $r$ aux efforts généralisés et de façon duale les vitesse relatives au contact aux vitesses généralisées. 
+
+\clearpage
 \begin{itemize}
 \item Description du problème de frottement discret
 \item Problème de rang de H
