[tex] add a picture of THE Murette

--- a/acary_bremond_dubois_csma2017.tex
+++ b/acary_bremond_dubois_csma2017.tex
@@ -270,6 +270,12 @@ On peut remarquer que $\rho_s(1)$ représente la probabilité que la méthode $s
 
 \subsection{La murette}
 
+\begin{figure}
+  \centering
+  \includegraphics[height=0.2\textheight]{./figure/LowWall_FEM.png}
+  \caption{Une murette}
+  \label{fig:LowWall_FEM}
+\end{figure}
 \subsection{Résultats}
 % \begin{figure}
 %   \centering
