--- a/acary_bremond_dubois_csma2017.tex
+++ b/acary_bremond_dubois_csma2017.tex
@@ -247,12 +247,12 @@ La résolution du problème local au contact~(\ref{eq:pgs-1}) peut se faire de m
 \begin{table}
   \centering
   \begin{tabular}{ll}
-    $\sf\small NSN-AC-NLS$ & Méthode de Newton non--lisse utilisant~(\ref{eq:AC-1}) sans recherche linéaire \\
-    $\sf\small NSN-JM-NLS$ & Méthode de Newton non--lisse utilisant~(\ref{eq:MJ-II}) sans recherche linéaire \\
-    $\sf\small NSN-NM-NLS$ & Méthode de Newton non--lisse utilisant~(\ref{eq:natural-II}) sans recherche linéaire \\
-    $\sf NSN-AC-NLS-HYBRID$ & Méthode $\sf NSN-AC-NLS$ avec  un pré--conditionnement par $100$ itérations de NSGS-AC \\
-    $\sf NSGS-AC$ & Méthode de Gauss Seidel avec NSN-AC-NLS pour méthode locale\\
-    $\sf NSGS-FP-VI-UPK$ & Méthode de Gauss Seidel avec itération de points fixe de $F_\nat(r)-r$\\
+    {\sf\small NSN-AC-NLS} & Méthode de Newton non--lisse utilisant~(\ref{eq:AC-1}) sans recherche linéaire \\
+    {\sf\small NSN-JM-NLS} & Méthode de Newton non--lisse utilisant~(\ref{eq:MJ-II}) sans recherche linéaire \\
+    {\sf\small NSN-NM-NLS} & Méthode de Newton non--lisse utilisant~(\ref{eq:natural-II}) sans recherche linéaire \\
+    {\sf\small NSN-AC-NLS-HYBRID} & Méthode {\sf\small NSN-AC-NLS} avec  un pré--conditionnement par $100$ itérations de {\sf\small NSGS-AC} \\
+    {\sf\small NSGS-AC} & Méthode de Gauss Seidel avec {\sf\small NSN-AC-NLS} pour méthode locale\\
+    {\sf\small  NSGS-FP-VI-UPK} & Méthode de Gauss Seidel avec itérations locales de points fixe de $F_\nat(r)-r$\\
   \end{tabular}
   \caption{Nomenclature des méthodes utilisées}
   \label{tab:nomenclature}
@@ -310,7 +310,13 @@ Le système est modélisé et simulé par le logiciel LMGC90. A chaque pas de te
  LMGC90~\cite{} est ... . L'implantation des méthodes de résolution est faite dans Siconos~\cite{??} qui est un logiciel open--source de modélisation et de simulation des systèmes dynamiques non lisse  Enfin FCLib~\cite{??} est un format et une collection ouverte de problèmes de frottement qui permet de comparer des méthodes des résolution sur une large base d'exemples.
 
 \paragraph{Résultats}
+Sur la figure~\ref{fig:LowWall_FEM.simple}, on représente les profils de performance des méthodes de résolution pour des précisions différentes. 
 
+Pour une précision relativement faible de $10^{-2}$, Les performances des méthodes sont très proches. Les méthodes de Newton non lisses  {\sf\small NSN-AC-NLS}, {\sf\small NSN-JM-NLS} et {\sf\small NSN-AC-NLS-HYBRID} sont légèrement meilleures que {\sf\small NSGS-AC} et {\sf\small NSGS-FP-VI-UPK}. La méthode {\sf\small NSN-AC-NLS-HYBRID} qui utilise un pré--conditionnement apparaît comme étant la plus performante ce qui est logique puisque les méthodes de projection permettent de trouver une solution grossière plus rapidement. La méthode {\sf\small NSN-NM-NLS} est la moins performante.
+
+Pour une précision de $10^{-3}$, toutes les méthodes de Newton non--lisses sont plus performantes. Elles sont les plus rapides et ne posent pas de problème de robustesse. La méthode {\sf\small NSN-NM-NLS} est la moins performante des méthodes de Newton. On peut noter que la méthode {\sf\small NSN-AC-NLS-HYBRID}  est la plus performante et qu'elle est en moyenne 4 fois plus performante que la méthode  {\sf\small NSGS-AC}. 
+
+Pour une précision de  $10^{-4}$ et $10^{-6}$, cette tendance s'accentue avec des méthodes de Newton qui sont en moyenne $20$ fois et respectivement $40$ fois plus performantes que les méthodes itératives de projection. Un zoom sur les méthodes de Newton montre que leur performance relative reste inchangée. Par contre, la méthode de ${\sf\small NSGS-FP-VI-UPK}$ devient plus performante que la méthode de {\sf\small NSGS-AC} pour une précision de $10^{-6}$.
 
 % \begin{figure}
 %   \centering
@@ -341,7 +347,7 @@ Le système est modélisé et simulé par le logiciel LMGC90. A chaque pas de te
 %   \label{fig:LowWall_FEM.1e-8.simple}
 % \end{figure}
 
-\begin{figure}
+\begin{figure}[htbp]
   \centering 
   \subfloat[précision $\epsilon = 10^{-2}$]{\includegraphics[width=0.49\textwidth]{figure/LowWall_FEM.1e-2.with_guess/simple/profile-LMGC_LowWall_FEM.pdf}\label{fig:LowWall_FEM.1e-3.simple}}
    \subfloat[précision $\epsilon = 10^{-3}$]{\includegraphics[width=0.49\textwidth]{figure/LowWall_FEM.1e-3.with_guess/simple/profile-LMGC_LowWall_FEM.pdf}\label{fig:LowWall_FEM.1e-3.simple}}\\
@@ -376,6 +382,16 @@ Le système est modélisé et simulé par le logiciel LMGC90. A chaque pas de te
 \section{Utilisation des solides élastiques pour améliorer la convergence}
 
 \section{Conclusion}
+
+En conclusion, on peut observer que 
+\begin{itemize}
+\item Pour des précisions relativement élevées (au delà de $10^-4$), les méthodes de Newton lisses sont beaucoup plus performantes pour des systemes multi--corps flexibles.
+\item La méthode {\sf\small NSN-AC-NLS-HYBRID} est la méthode la plus performante des méthodes de Newton. Le pré--conditionnement permet d'accélérer la convergence des premières itérations de Newton.
+
+\item Les méthodes itératives ...
+\end{itemize}
+
+
 
 intégration du non-linéaire de comportement ou géométrique
 
